feat: add multi-agent configuration, security boundaries, scoring, and prompt injection defenses
Restructure agent configuration for universal compatibility:
- AGENTS.md: rewritten to AAIF AGENTS-SPEC-v1 standard with all required sections
- CLAUDE.md: now references generic rules instead of duplicating them
- GEMINI.md: added for Google Gemini Code Assist / Jules
- .github/copilot-instructions.md: added for GitHub Copilot
- .agent-config/AGENT_RULES.md: agent-agnostic rules (shared by all agents)
- .agent-config/security-boundaries.md: OWASP-aligned security policy
- .agent-config/prompt-injection-defenses.md: content fencing, red-team scenarios
- .agent-config/scoring/rubric.md: agent-readiness scoring dimensions
- .agent-config/scoring/self-score.md: current assessment (A4 / B3)

Any coding agent (Claude, Codex, Copilot, Gemini, Q Developer, Cursor,
Windsurf) can now read AGENTS.md and start working. Agent-specific
files reference the generic rules to avoid duplication.

https://claude.ai/code/session_011yhWKXz1Q9xkRySGxwX2eL